--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/validator": "^13.7.10",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
